added score logic